[gd_scene load_steps=6 format=3 uid="uid://0cdht6xykwu7"]

[ext_resource type="Script" path="res://Scripts/spawn_manager.gd" id="1_bvj0y"]
[ext_resource type="PackedScene" uid="uid://b5guql3jxuxf" path="res://Scenes/Assets/Mobs/blue_demon.tscn" id="2_vgpgw"]
[ext_resource type="PackedScene" uid="uid://dcu24u5hlay3i" path="res://Scenes/Assets/Mobs/red_demon.tscn" id="3_jxfht"]
[ext_resource type="Script" path="res://Scripts/GameUIManager.gd" id="4_v33no"]

[sub_resource type="LabelSettings" id="LabelSettings_tnijv"]
font_size = 18

[node name="UIController" type="Node3D"]

[node name="SpawnManager" type="Node3D" parent="."]
script = ExtResource("1_bvj0y")
blueDemon = ExtResource("2_vgpgw")
redDemon = ExtResource("3_jxfht")
waveTime = 45

[node name="GameUIManager" type="Node3D" parent="."]
script = ExtResource("4_v33no")

[node name="HUD" type="Node3D" parent="GameUIManager"]

[node name="GoldLabel" type="Label" parent="GameUIManager/HUD"]
offset_top = 16.0
offset_right = 128.0
offset_bottom = 86.0
label_settings = SubResource("LabelSettings_tnijv")

[node name="TopMinions" type="Label" parent="GameUIManager/HUD"]
offset_left = 152.0
offset_top = 16.0
offset_right = 336.0
offset_bottom = 86.0
label_settings = SubResource("LabelSettings_tnijv")

[node name="MidMinions" type="Label" parent="GameUIManager/HUD"]
offset_left = 360.0
offset_top = 16.0
offset_right = 544.0
offset_bottom = 86.0
label_settings = SubResource("LabelSettings_tnijv")

[node name="BotMinions" type="Label" parent="GameUIManager/HUD"]
offset_left = 568.0
offset_top = 16.0
offset_right = 752.0
offset_bottom = 86.0
label_settings = SubResource("LabelSettings_tnijv")

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 45.0

[node name="MobTimer" type="Timer" parent="."]

[node name="StartDelayTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="timeout" from="WaveTimer" to="SpawnManager" method="_on_wave_timer_timeout"]
[connection signal="timeout" from="MobTimer" to="SpawnManager" method="_on_mob_timer_timeout"]
[connection signal="timeout" from="StartDelayTimer" to="SpawnManager" method="_on_start_delay_timer_timeout"]
